# CQ-Lite

./: .env.example  .gitignore  .vercelignore  DEPLOYMENT.md  README.md  create_demo_files.py  netlify.toml  package-lock.json  pyproject.toml  render.yaml  requirements-vercel.txt  requirements.txt  strip_comments.py  vercel.json
api/: __init__.py  __main__.py  main.py
api/models/: api_models.py
api/routers/: github.py  graph.py  report.py  status.py  upload.py
api/services/: analyzer.py  dependency_graph.py  job_store.py
backend/: main.py
backend/agents/: ai_review_agent.py  docker_analysis_agent.py  file_discovery_agent.py  javascript_analysis_agent.py  notion_report_agent.py  python_analysis_agent.py  qna_agent.py  state_schema.py  workflow.py
backend/analyzers/: code_analyzer.py  docker_analyzer.py  github_helpers.py  javascript_analyzer.py  python_analyzer.py
backend/models/: analysis_models.py
backend/services/: gemini_service.py  llm_service.py  nebius_service.py
backend/tools/: github_tool.py  langgraph_vector_node.py  notion_tool.py  vector_store_tool.py
cli/: __main__.py  agentic_cli.py  env_helpers.py  formatters.py
docs/: ARCHITECTURE.md  CLI-QUICK-REF.md  CLI.md  Content.md  DEMO.md  SETUP.md
docs/Architecture_diagrams/: architecture_diagram.mermaid  workflow_diagram.mermaid  workflow_diagram_detailed.mermaid
docs/Deliverables/: ARCHITECTURE.md  README.md  SETUP.md  TECHNICAL_NOTES.md  WORKFLOW_OPTIMIZATIONS.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/components/: AnalysisResults.tsx  DependencyGraph.tsx  FileUploadForm.tsx  GitHubAnalysisForm.tsx  JobStatus.tsx  SeverityDistribution.tsx  SeverityPieChart.tsx
frontend/utils/: apiService.ts
test_cli/: test_agentic.py  test_langgraph_toolnode.py  test_simple_agentic.py  test_tool_usage.py  test_workflow_graph.py
test_files/: test_agentic.py  test_langgraph_toolnode.py  test_tool_usage.py
tests_server/: test_api.py  test_api_async.py
(+2 files in other folders)
